Adicionando alterações de estilização

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -23,6 +23,7 @@
             text-decoration: none;
             color: #090909;
             transition: color 0.2s linear;
+            cursor: pointer;
 
             &:hover {
                 color: #d0d0d0;
