--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -22,5 +22,11 @@
         font-size: 16px;
         font-weight: 300;
         text-transform: uppercase;
+        cursor: pointer;
+        transition: all 0.2s linear;
+
+        &:hover {
+            background: rgba($color: #090909, $alpha: 0.7);
+        }
     }
 }
