--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -5,11 +5,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 500px;
+    height: calc(100vh - 61px);
     width: 700px;
     margin: 0 auto;
 
     &__title {
+        font-size: 32px;
+        margin: 0 0 24px;
+
         span {
             font-family: "Amatic SC", cursive;
         }
@@ -22,7 +25,7 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        font-size: 14px;
+        font-size: 18px;
         color: #090909;
     }
 }
