Adicionando alteraçõe na estilização.

--- a/src/Components/Incomes/Incomes.scss
+++ b/src/Components/Incomes/Incomes.scss
@@ -1,12 +1,10 @@
 .incomes {
-    height: 250px;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
 
     &__title {
-        margin: 0 0 3rem;
+        margin: 1rem 0 2rem;
     }
 
     &__form {
